# claude-rank

./: .gitignore  .mcp.json  CONCEPT.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
hooks/: bootstrap.sh  hooks.json  post-tool-use.py  session-start.sh
skills/achievements/: SKILL.md
skills/badge/: SKILL.md
skills/leaderboard/: SKILL.md
skills/rank/: SKILL.md
skills/wrapped/: SKILL.md
src/claude_rank/: __main__.py  achievements.py  badge.py  cli.py  config.py  db.py  display.py  engagement_rating.py  leaderboard.py  levels.py  mcp_server.py  parser.py  streaks.py  wrapped.py  xp.py
tests/: test_achievements.py  test_badge.py  test_cli.py  test_config.py  test_db.py  test_engagement_rating.py  test_leaderboard.py  test_levels.py  test_mcp_server.py  test_parser.py  test_prestige.py  test_streaks.py  test_wrapped.py  test_xp.py
