[project]
name = "claude-rank"
version = "0.1.0"
description = "Gamify your Claude Code usage with XP, levels, achievements, and streaks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
claude-rank = "claude_rank.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_rank"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
