[project]
name = "claude-rank"
version = "0.1.0"
description = "Gamify your Claude Code usage with XP, levels, achievements, and streaks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "filipores" },
]
keywords = [
    "claude", "claude-code", "gamification", "xp", "levels",
    "achievements", "productivity", "terminal", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/filipores/claude-rank"
Repository = "https://github.com/filipores/claude-rank"
"Bug Tracker" = "https://github.com/filipores/claude-rank/issues"

[project.scripts]
claude-rank = "claude_rank.cli:main"
claude-rank-mcp = "claude_rank.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "build",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_rank"]

[tool.hatch.version]
path = "src/claude_rank/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
